--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "fabric": "^5.3.0",
+    "fabricjs-react": "^1.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-scrollbars-custom": "^4.1.1",
+    "sass": "^1.58.0",
+    "zustand": "^4.3.3"
   },
   "devDependencies": {
+    "@types/fabric": "^4.5.15",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "prettier": "2.8.4",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
