--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "fabric": "^5.3.0",
     "fabricjs-react": "^1.2.0",
+    "html2canvas": "^1.4.1",
+    "immer": "^9.0.19",
+    "node-base64-image": "^2.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scrollbars-custom": "^4.1.1",
