--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "prettier": "2.8.4",
+    "stylelint": "^15.1.0",
+    "stylelint-config-standard-scss": "^7.0.1",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
