--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "node-base64-image": "^2.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
     "react-scrollbars-custom": "^4.1.1",
     "sass": "^1.58.0",
+    "vite-plugin-svgr": "^2.4.0",
+    "webfontloader": "^1.6.28",
     "zustand": "^4.3.3"
   },
   "devDependencies": {
     "@types/fabric": "^4.5.15",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/webfontloader": "^1.6.35",
     "@vitejs/plugin-react": "^3.1.0",
     "prettier": "2.8.4",
     "stylelint": "^15.1.0",
